Add missing translation
Related AB#1094

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -48,7 +48,8 @@
         "created": "Program created at",
         "updated": "Program last updated at",
         "customCriteria": "Inclusion criteria",
-        "aidworkers": "Assigned aidworkers"
+        "aidworkers": "Assigned aidworkers",
+        "financialServiceProviders": "Financial Service-providers"
       },
       "program-modal": {
         "pageTitle": "Program JSON"
