--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -6,11 +6,10 @@
     "logout": "Log out",
     "change-password": "Change password",
     "delete-digital-id": "Delete Digital ID",
-    "close": "Close",
     "logged-out": "You are succesfully logged out.",
     "enter-password": "Your Password",
-    "delete-account-header": "Deleting your Digital ID is irreversible, all your data will be lost!",
-    "delete-account-message": "Enter your password if you are sure you want to delete your Digital ID",
+    "delete-account-header": "Enter your password if you are sure you want to delete your Digital ID",
+    "delete-account-message": "Deleting your Digital ID is irreversible, all your data will be lost!",
     "delete-succes": "Your account has been succesfully deleted. You will now logout"
   },
   "personal": {
@@ -146,6 +145,7 @@
   },
   "shared": {
     "submit-button": "Submit",
-    "close-buttion": "Close"
+    "cancel-button": "Cancel",
+    "close-button": "Close"
   }
 }
