--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -10,7 +10,8 @@
     "enter-password": "Your Password",
     "delete-account-header": "Enter your password if you are sure you want to delete your Digital ID",
     "delete-account-message": "Deleting your Digital ID is irreversible, all your data will be lost!",
-    "delete-succes": "Your account has been succesfully deleted. You will now logout"
+    "delete-succes": "Your account has been succesfully deleted. You will now logout",
+    "delete-fail": "Something went wrong, your account could not by fully deleted."
   },
   "personal": {
     "create-identity": {
