--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -20,7 +20,8 @@
     },
     "programs": {
       "program-list": {
-        "pageTitle": "All Programs"
+        "pageTitle": "All Programs",
+        "not-available": "No programs available."
       },
       "program-details": {
         "pageTitle": "Program details",
