AB#707 Add calculation of total amount in confirmation-alert
Related AB#1222

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -64,6 +64,8 @@
       },
       "program-payout": {
         "start-payout": "Start payout now",
+        "total-included": "Number of PA included",
+        "total-amount": "Total amount to payout:",
         "payout-success": "Payout successful.",
         "payout-error": "Payout unsuccessful."
       },
