--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -72,7 +72,8 @@
         "payout-error": "Payout unsuccessful."
       },
       "program-people": {
-        "pageTitle": "Manage included people"
+        "pageTitle": "Manage included people",
+        "submit": "Include selected people"
       },
       "program-modal": {
         "pageTitle": "Program JSON"
