Cleanup Program-Details + remove unused code/styles

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -27,8 +27,8 @@
       "program-details": {
         "pageTitle": "Program details",
         "section-funds": "Funds overview",
-        "section-people": "Manage people included",
-        "go-to-people-page": "Go to Page",
+        "section-people": "People overview",
+        "manage-people": "Manage people",
         "section-payout": "Payout",
         "section-details": "Details overview",
         "all": "All details",
