Simplify/Cleanup setup of ngx-datatable + make translatable

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -72,7 +72,12 @@
         "payout-error": "Payout unsuccessful."
       },
       "program-people": {
-        "pageTitle": "Manage included people",
+        "pageTitle": "Manage people",
+        "column": {
+          "person": "Person",
+          "score": "Inclusion score",
+          "include": "Include"
+        },
         "submit": "Include selected people"
       },
       "program-modal": {
