AB#1280 exclude unselected people

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -78,7 +78,7 @@
           "score": "Inclusion score",
           "include": "Include"
         },
-        "submit": "Include selected people"
+        "submit": "Confirm inclusion decision"
       },
       "program-modal": {
         "pageTitle": "Program JSON"
