Add translatable messages to datatable

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -99,6 +99,11 @@
     }
   },
   "common": {
+    "table": {
+      "no-data": "No data to display",
+      "total": "total",
+      "selected": "selected"
+    },
     "update": "Update",
     "confirm": "Are you sure?",
     "cancel": "Cancel",
