--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -17,12 +17,15 @@
     "create-identity": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
       "more-info-digital-id": "About Digital ID",
+      "info-message": "Lorem ipsem bladibla",
       "username-password": "First step: create a username and a password. You will need to remember these.",
       "more-info-username-pw": "About usernames and passwords",
+      "info-message-username-pw": "Lorem ipsem bladibla",
       "create-username": "Create username:",
       "submit-username": "Create my username",
       "password-only": "First step: Create a password.",
       "more-info-password": "About passwords",
+      "info-message-password": "Lorem ipsem bladibla",
       "create-password": "Create password:",
       "confirm-password": "Confirm password:",
       "submit-password": "Create my password",
@@ -44,18 +47,20 @@
       "introduction": "We have received your request to apply for <strong>{{programTitle}}</strong> of <strong>{{ngo}}</strong>.",
       "introduction-questions": "To make sure you get the best possible help and a fair process, we need some personal information.",
       "more-info-questions": "About this",
+      "info-message": "Lorem ipsem bladibla",
       "more-info-share": "Who sees your information",
+      "info-message-share": "Lorem ipsem bladibla",
       "submit": "Save my answers",
       "dob-feedback": "Your date of birth does not have a valid format. Please adjust and save again.",
       "please-confirm": "Below is an overview of your information. Please confirm and submit.",
       "submit-confirm": "Submit my information",
       "change": "Change my information",
       "confirm-received": "Next step: Make an appointment for Digital ID activation and program application.",
-      "more-info-activation": "About activation",
       "prepare-documents": "To save time at your appointment, make sure to bring these documents:"
     },
     "initial-needs": {
       "introduction": "In order to help you as best as possible, please tell us what your needs are.",
+      "info-message": "Lorem ipsem bladibla",
       "input-label": "My needs are:",
       "input-placeholder": "I need...",
       "submit": "Submit my needs",
@@ -65,7 +70,8 @@
       "introduction": "Please select your next step.",
       "create-id": "Create a Digital ID",
       "login-id": "Use existing Digital ID",
-      "more-info-digital-id": "About Digital ID"
+      "more-info-digital-id": "About Digital ID",
+      "info-message": "Lorem ipsem bladibla"
     },
     "payment-method": {
       "introduction": "If you are included in the program, how would you like to receive your money?",
@@ -74,6 +80,7 @@
     "select-appointment": {
       "introduction": "Next step: Make an appointment for Digital ID activation and program application.",
       "more-info-activation": "About activation",
+      "info-message": "Lorem ipsem bladibla",
       "select": "Select a date and time:",
       "thanks-repeat": "You have selected the following date and time:",
       "documents": "Please ensure you have the following documents:",
@@ -104,6 +111,7 @@
       "till": "Till",
       "at": "At",
       "more-info-documents": "About these documents",
+      "info-message": "Lorem ipsem bladibla",
       "qr-code": "Please show this QR-code at your meeting.",
       "meeting-reminder": "Here is everything you need to know about your meeting:",
       "meeting-count-down": "Your meeting appointment takes place in <strong>{{daysToMeeting}}</strong> days.",
@@ -126,6 +134,7 @@
     "select-program": {
       "introduction": "Next step: Select a program.",
       "more-info-programs": "About programs",
+      "info-message": "Lorem ipsem bladibla",
       "program": "Program"
     },
     "store-credential": {
