Added updated created to people table AB#1297

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -81,6 +81,8 @@
           "person": "Person",
           "score": "Inclusion score",
           "include": "Include",
+          "created": "Created",
+          "updated": "Updated",
           "name": "Name",
           "dob": "Date of birth"
         },
