--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -86,6 +86,11 @@
           "name": "Name",
           "dob": "Date of birth"
         },
+        "submit-warningPrivacy": "Inclusion will be updated for:",
+        "submit-warning": "Inclusion will become final for:",
+        "submit-warning-pa-included": "PA included:",
+        "submit-warning-pa-excluded": "PA excluded:",
+        "submitPrivacy": "Update inclusion decision",
         "submit": "Confirm inclusion decision"
       },
       "program-modal": {
