AB#1350 list of installments in HO-portal

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -66,6 +66,7 @@
         "last-updated": "Last updated: {{date}}"
       },
       "program-payout": {
+        "installment-nr": "Installment #",
         "start-payout": "Start payout now",
         "total-included": "Number of PA included",
         "total-amount": "Total amount to payout:",
