--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -75,7 +75,7 @@
     },
     "select-fsp": {
       "introduction": "If you are included in the program, how would you like to receive your money?",
-      "conclusion": "Thank you. You have selected payment option <strong>{{fspName}}</strong>."
+      "conclusion": "Thank you. You have selected payment option: <strong>{{name}}</strong>.",
     },
     "select-appointment": {
       "introduction": "Next step: Make an appointment for Digital ID activation and program application.",
