AB#1407 basic navigation-phase bar

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -20,6 +20,14 @@
       "pageTitle": "Home"
     },
     "programs": {
+      "phases": {
+        "design": "Design",
+        "registration": "Registration",
+        "inclusion": "Inclusion",
+        "finalize": "Finalize",
+        "payment": "Payment",
+        "evaluation": "Evaluation"
+      },
       "program-list": {
         "pageTitle": "All Programs",
         "not-available": "No programs available."
