--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -107,8 +107,8 @@
       "input-label": "Phone number (with country-code)",
       "submit": "Submit phone number",
       "skip": "Skip",
-      "conclusion1": "Thank you. You will now receive notifications on this phone number: <strong>{{phone}}</strong>",
-      "conclusion2": "You have chosen not to leave a phone number. Please log in back here regularly, to check on updates.",
+      "conclusion-submitted": "Thank you. You will now receive notifications on this phone number: <strong>{{phone}}</strong>",
+      "conclusion-skipped": "You have chosen not to leave a phone number. Please log in back here regularly, to check on updates.",
       "logout-info": "If you want, you can now log out, under the account-button on the top right. When you return here, you can log in with your username and password."
     },
     "meeting-reminder": {
