AB#1387 explain disabled if 0 included

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -73,7 +73,8 @@
         "total-included": "Number of PA included",
         "total-amount": "Total amount to payout:",
         "payout-success": "Payout successful.",
-        "payout-error": "Payout unsuccessful. Are there enough funds?"
+        "payout-error": "Payout unsuccessful. Are there enough funds?",
+        "none-included": "No included people yet."
       },
       "program-people": {
         "pageTitle": "Manage people",
