AB#1282 store earlier work + disable login-bug

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
       },
       "program-details": {
         "pageTitle": "Program details",
+        "advance-phase": "Advance to next program phase",
         "section-funds": "Funds overview",
         "section-people": "People overview",
         "manage-people": "Manage people (Regular)",
