Update "enroll in program" texts

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -44,15 +44,15 @@
       "conclusion": "Great! You have now returned to your existing Digital ID. You can log out, and find other account-features, under the green account-button in the top right."
     },
     "enroll-in-program": {
-      "introduction": "We have received your request to apply for <strong>{{programTitle}}</strong> of <strong>{{ngo}}</strong>.",
+      "introduction": "Hello this is <strong>{{ngo}}</strong>. We have received your request to apply for <strong>{{programTitle}}</strong>.",
       "introduction-questions": "To make sure you get the best possible help and a fair process, we need some personal information.",
-      "more-info-questions": "About this",
+      "more-info-questions": "About personal information",
       "info-message": "Lorem ipsem bladibla",
       "more-info-share": "Who sees your information",
       "info-message-share": "Lorem ipsem bladibla",
-      "submit": "Save my answers",
+      "submit": "Save my information",
       "dob-feedback": "Your date of birth does not have a valid format. Please adjust and save again.",
-      "please-confirm": "Below is an overview of your information. Please confirm and submit.",
+      "please-confirm": "Below is an overview of your information. Please check and submit.",
       "submit-confirm": "Submit my information",
       "change": "Change my information",
       "confirm-received": "Next step: Make an appointment for Digital ID activation and program application.",
