--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -75,10 +75,10 @@
     },
     "select-fsp": {
       "introduction": "If you are included in the program, how would you like to receive your money?",
-      "conclusion": "Thank you. You have selected payment option: <strong>{{name}}</strong>.",
+      "conclusion": "Thank you. You have selected the option <strong>{{name}}</strong>.",
       "attributes": {
-        "introduction": "Please answer these additional questions:",
-        "submit": "Save my answers",
+        "introduction": "For this option we also need the following:",
+        "submit": "Save my information",
         "error": "Something went wrong, please try again.",
         "success": "Thank you. Your additional information is saved."
       }
