AB#1444 replace un/publish endpoint by changeState

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -80,6 +80,7 @@
         "descHumanitarianObjective": "Description: Humanatarian objective",
         "descCashType": "Description: Cash Type",
         "published": "Published",
+        "state": "Current program phase",
         "created": "Program created at",
         "updated": "Program last updated at",
         "customCriteria": "Inclusion criteria",
