Use phone-number-validation component in Q&A-set
Related AB#1473

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -105,7 +105,6 @@
       "input-label": "Phone number (with country-code)",
       "submit": "Submit phone number",
       "skip": "Skip",
-      "validation-error": "We couldn't verify that phone-number. Please update and try again.",
       "conclusion-submitted": "Thank you. You will now receive notifications on this phone number: <strong>{{phone}}</strong>",
       "conclusion-skipped": "You have chosen not to leave a phone number. Please log in back here regularly, to check on updates.",
       "logout-info": "If you want, you can now log out, under the account-button on the top right. When you return here, you can log in with your username and password."
@@ -162,6 +161,9 @@
   "password-toggle": {
     "show": "Show password",
     "hide": "Hide password"
+  },
+  "validation": {
+    "phoneNumber":  "We couldn't verify that phone-number. Please update and try again."
   },
   "shared": {
     "submit-button": "Submit",
