Make retry-confirm-label translatable

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -165,6 +165,9 @@
   "validation": {
     "phoneNumber":  "We couldn't verify that phone-number. Please update and try again."
   },
+  "connection": {
+    "error-retry": "Something went wrong, do you want to try again?"
+  },
   "shared": {
     "submit-button": "Submit",
     "cancel-button": "Cancel",
