AB#1307 Make validation-message 'more connected' to input-component
Related AB#1520
Related AB#1519
Related AB#1518

--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -163,6 +163,7 @@
     "hide": "Hide password"
   },
   "validation": {
+    "generic-error": "We cannot process some of your input. Please check and update one of your answers.",
     "phoneNumber":  "We couldn't verify that phone-number. Please update and try again."
   },
   "connection": {
