AB#1460 show (new) columns by phase

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -113,10 +113,17 @@
         "noConnectionsPrivacy": "There are no included or excluded People Affected yet.",
         "column": {
           "person": "Person",
+          "digital-id-created": "Digital ID Applied",
+          "digital-id-validated": "Digital ID Validated",
+          "vulnerability-assessment-created": "Vulnerability Assessment Applied",
+          "vulnerability-assessment-validated": "Vulnerability Assessment Validated",
           "score": "Inclusion score",
           "include": "Include",
-          "created": "Created",
-          "updated": "Updated",
+          "included": "Included",
+          "inclusion-communication": "Inclusion communication",
+          "payment-1": "Payment #1",
+          "payment-2": "Payment #2",
+          "payment-3": "Payment #3",
           "name": "Name",
           "dob": "Date of birth"
         },
