AB#1531 copy inclusion-ready-logic to payment

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -43,7 +43,7 @@
         },
         "payment": {
           "label": "Payment",
-          "btnText": "Payout"
+          "btnText": "Move to evaluation"
         },
         "evaluation": {
           "label": "Evaluation",
