AB#1537 fill payment-columns dynamically

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -109,6 +109,7 @@
       "program-people": {
         "pageTitle": "Manage people",
         "pageTitlePrivacy": "Manage people (Privacy Officer)",
+        "targetNumber": "The target number of people to include is: ",
         "noConnections": "There are no new enrolled People Affected.",
         "noConnectionsPrivacy": "There are no included or excluded People Affected yet.",
         "column": {
