AB#1541 set target-number of PAs

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -109,8 +109,8 @@
       "program-people": {
         "pageTitle": "Manage people",
         "pageTitlePrivacy": "Manage people (Privacy Officer)",
-        "targetNumber": "The target number of people to include is: ",
-        "noConnections": "There are no new enrolled People Affected.",
+        "targetNumber": "The target number of People Affected to include is: ",
+        "noConnections": "There are no enrolled People Affected yet.",
         "noConnectionsPrivacy": "There are no included or excluded People Affected yet.",
         "column": {
           "person": "Person",
