Add more metrics
Related AB#1468

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -57,6 +57,7 @@
           "available": "Funds Available"
         },
         "pa": {
+          "targeted": "PA Targeted",
           "pending-verification": "PA Pending verification",
           "verified-awaiting-decision": "PA Verified",
           "included": "PA Included",
@@ -87,7 +88,7 @@
         "currency": "Currency",
         "distributionFrequency": "Distribution frequency",
         "distributionDuration": "Distribution duration",
-        "fixedTransferValue": "Fixed Transfer Value (per installment)",
+        "fixedTransferValue": "Transfer Value",
         "inclusionCalculationType": "Inclusion calculation type",
         "minimumScore": "Minimum score needed",
         "highestScoresX": "Top X highest scores included",
