Make metric-units translatable

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -67,6 +67,9 @@
           "metric": "Metric",
           "latest-value": "Latest value"
         },
+        "units": {
+          "month": "month"
+        },
         "last-updated": "Last updated: {{date}}"
       },
       "program-details": {
