Make Metrics-component collapsable
Related AB#1521

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -64,6 +64,8 @@
           "excluded": "PA Excluded"
         },
         "header": {
+          "expand": "Expand",
+          "collapse": "Collapse",
           "metric": "Metric",
           "latest-value": "Latest value"
         },
