--- a/interfaces/PA-App/src/assets/i18n/en.json
+++ b/interfaces/PA-App/src/assets/i18n/en.json
@@ -17,10 +17,10 @@
     "create-identity": {
       "introduction": "To create a Digital ID you need to complete the following steps.",
       "more-info-digital-id": "About Digital ID",
-      "info-message": "Lorem ipsem bladibla",
+      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your username (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "username-password": "Create a username and a password.",
       "more-info-username-pw": "About usernames and passwords",
-      "info-message-username-pw": "Lorem ipsem bladibla",
+      "info-message-username-pw": "To create a Digital Identity you need to create the following <br><br>3. Your username (which you can create by following this video advise)<br>4. Your Password (which you can create by following this video advise)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross.",
       "create-username": "Create username:",
       "submit-username": "Create my username",
       "password-only": "Create a password.",
@@ -63,7 +63,7 @@
       "create-id": "Create a Digital ID",
       "login-id": "Use my Digital ID",
       "more-info-digital-id": "About Digital ID",
-      "info-message": "Lorem ipsem bladibla"
+      "info-message": "The following two parts of your information is used to create a digital ID.<br><br>1. Your username (which you will create below)<br>2. Your Password (which must consists of 4 digits/numbers)<br><br>If you create a Digital ID for this pilot program it will be stored securely on the Netherlands Red Cross Server.  What is a Server? In this case the server is the physical computer that a server program runs on and it is owned by The Netherlands Red Cross."
     },
     "select-fsp": {
       "introduction": "If you are included in the program, how would you like to receive your money?",
@@ -121,7 +121,7 @@
     "select-language": {
       "introduction": "Welcome to 121. Please select your language.<br><br>Bienvenu chez 121. Choisi votre langue.<br><br>Bienvenido a 121. Selecciona tu idioma.",
       "more-info": "About 121",
-      "info-message": "Lorem ipsum bladibladibla.",
+      "info-message": "With the 121 platform, we aim to make Cash Based Aid safe, fast & fair, to help you if you have been affected by disasters and crises to meet your own needs. 121 will help you<br><ul><li>Create a Digtial ID</li><li>Know which programs are available in your area</li><li>Apply to the programs</li><li>Understand who sees your information</li></ul>",
       "option1": "English",
       "option2": "Français",
       "option3": "Español",
@@ -130,7 +130,7 @@
     "select-program": {
       "introduction": "Next step: select your program.",
       "more-info-programs": "About programs",
-      "info-message": "Lorem ipsem bladibla",
+      "info-message": "How was the Pilot created?<br>This 121 Pilot has been created with Dorcas who have worked together with your communities in<br><ul><li>Bishoftu Camp 1</li><li>Bishoftu Camp 2</li><li>Bishoftu Camp 3</li><li>Bishoftu Camp 4</li><li>Bishoftu Camp 5</li><li>Bishoftu Camp 6</li><li>Bishoftu Camp 7</li><li>Bishoftu Camp 8</li></ul><br>Together your community and Dorcas decided how to Identify 250 households that are most in need of Cash based Aid. Needs are based on looking at family size and if or your family members are<br><ul><li>Chronically ill</li><li>Disabled</li><li>Pregnant</li><li>Lactating</li><li>Widowed</li></ul><br>If you are included in the program it will mean that you will receive the cash as<br><br><ul><li>unconditional, meaning to receive it you only need to fulfill the criteria of  “most in need”.</li><li>unrestricted, meaning whomever receives it, can spend it in any way they see fit.</li></ul><br>What will the each of the 250 households receive?<br>Together your community and Dorcas decided to give <br>XXX ETB given in 1 payment.<br><br>When will the each of the 250 households receive it?<br>Together your community and Dorcas decided how to give<br>Payment 1 of 1: XXX MKW on XX-XX-XXXX<br><br>Where will the each of the 250 households get it?<br>Together your community and Eagles decided Identified the following ways<br><ul><li>Bank of Oromia </ul><br>How does it work?<br>After 121 registration/Digital ID Creation and Registration/Digital ID Activation<br><br><ul><li>An initial list of included will be created.</li><li>This list will be shared within the community leaders</li><li>The existing community leaders will give feedback on the list to Dorcas.</li><li>Dorcas will take this feedback to create the final list (final decision is by Dorcas)</li><li>If you have a phone number you will receive a text message to tell you if you are included</li></ul><br>If you do not have a phone number you will be able to see a list in your community to check if you are included or excluded",
       "program": "Program"
     },
     "store-credential": {
@@ -156,7 +156,7 @@
   },
   "validation": {
     "generic-error": "We cannot process some of your input. Please check and update one of your answers.",
-    "phoneNumber":  "We couldn't verify that phone-number. Please update and try again."
+    "phoneNumber": "We couldn't verify that phone-number. Please update and try again."
   },
   "connection": {
     "error-retry": "Something went wrong, do you want to try again?"
