Added manage aw to en.json

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -156,6 +156,9 @@
       },
       "program-modal": {
         "pageTitle": "Program JSON"
+      },
+      "manage-aidworkers": {
+        "email": "Enter email"
       }
     },
     "help": {
