--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -158,6 +158,9 @@
         "pageTitle": "Program JSON"
       },
       "manage-aidworkers": {
+        "section-title": "Manage aidworkers",
+        "column-email": "Email Aidworker",
+        "column-created": "Creation date",
         "email": "Enter email"
       }
     },
