AB#1639 delete aidworkers

--- a/interfaces/HO-Portal/src/assets/i18n/en.json
+++ b/interfaces/HO-Portal/src/assets/i18n/en.json
@@ -153,8 +153,9 @@
       },
       "manage-aidworkers": {
         "section-title": "Manage aidworkers",
-        "column-email": "Email Aidworker",
+        "column-email": "Email-adress",
         "column-created": "Creation date",
+        "column-delete": "Delete aidworker",
         "email": "Enter email"
       }
     },
